example-containerized-module/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-processor
  labels:
    app: payment-processor
spec:
  selector:
    app: payment-processor
  ports:
  - port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
